<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_girl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>
    <Button
        android:id="@+id/btn_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab5_Network"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_handler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_network"
        android:text="@string/tab5_Handler"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_MapJson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_handler"
        android:text="@string/tab5_MapJson"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_Load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_MapJson"
        android:text="@string/tab5_Load"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_DB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_Load"
        android:text="@string/tab5_DB"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_Girls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_Load"
        android:text="@string/tab5_Girls"
        android:gravity="center" />
    <Button
        android:id="@+id/btn_Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_DB"
        android:text="@string/tab5_Test"
        android:gravity="center" />
</RelativeLayout>
