<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/view_title"/>

    <Button
        android:id="@+id/btn_createDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createDB"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_getReadDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getReadDB"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_getWriteDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getWriteDB"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_updateDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateDB"
        android:gravity="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_updated_getDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updatedGetDB"
        android:gravity="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_testOtherMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testMethodDB"
        android:gravity="center"
        android:textSize="16sp"/>
</LinearLayout>
